--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous" />
     <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
     <script>
       document.createElement( "picture" );
     </script>
@@ -254,32 +254,33 @@
             <source
               type="image/webp"
               media="(min-width: 1300px)"
-              srcset="img/background-map-desktop@1x.webp 1x, img/background-map-desktop@2x.webp 2x"
+              srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x"
             />
             <source
               type="image/webp"
               media="(min-width: 768px)"
-              srcset="img/background-map-tablet@1x.webp 1x, img/background-map-tablet@2x.webp 2x"
+              srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x"
             />
             <source
               type="image/webp"
-              srcset="img/background-map-mobile@1x.webp 1x, img/background-map-mobile@2x.webp 2x"
+              srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x"
             />
             <source
               media="(min-width: 1300px)"
-              srcset="img/background-map-desktop@1x.png 1x, img/background-map-desktop@2x.png 2x"
+              srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x"
             />
             <source
               media="(min-width: 768px)"
-              srcset="img/background-map-tablet@1x.png 1x, img/background-map-tablet@2x.png 2x"
+              srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x"
             />
             <img
               class="map__scheme-img"
-              src="img/background-map-mobile@1x.png"
-              srcset="img/background-map-mobile@2x.png 2x"
+              src="img/bg-map-mobile@1x"
+              srcset="img/bg-map-mobile@2x.png 2x"
               alt="Cat before"
             />
           </picture>
+
         </div>
       </section>
 
@@ -334,7 +335,7 @@
           aria-label="Переход на сайт разработчика HTML Academy"
         >
           <span class="page-footer__author-name">HTML Academy</span>
-          <svg class="page-footer__author-img" width="26.943" height="34.09" role="img">
+          <svg class="page-footer__author-img" width="27" height="34" role="img">
             <use xlink:href="img/sprite.svg#htmlacademy"></use>
           </svg>
         </a>
