--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="fonts/oswaldmedium.woff" as="font" crossorigin="anonymous" />
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous" />
     <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+    <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script>
       document.createElement("picture");
@@ -320,7 +320,7 @@
           aria-label="Переход на сайт разработчика HTML Academy"
         >
           <span class="page-footer__author-name">HTML Academy</span>
-          <svg class="page-footer__author-img" width="26.943" height="34.09" role="img">
+          <svg class="page-footer__author-img" width="27" height="34" role="img">
             <use xlink:href="img/sprite.svg#htmlacademy"></use>
           </svg>
         </a>
